# uv-monorepo-conflict-demo

./: README.md
.github/workflows/: dependabot-uv-sync.yaml
common/: pyproject.toml
common/common/: hoge.py
repo_a/: pyproject.toml
repo_a/src/: main.py
repo_b/: Makefile.toml  pyproject.toml
repo_b/src/: main.py
