[project]
name = "repo-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.31.0",
    "common",
]
[dependency-groups]
dev = [
    "pytest==8.1.0",
]

# override-dependenciesを使う
# commonに依存しているライブラリは、override-dependenciesを使ってバージョンを固定する方式
# こうすると、commonで定義しているrequestsのバージョンに従って repo_aのrequestsのバージョンが決まる
# デメリット：依存が増えるたびにoverride-dependenciesを追加する必要がある
# [tool.uv]
# override-dependencies = [
#     "requests"
# ]

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.setuptools]
packages = ["src"]


